--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js localhost 8080"
+    "start": "./node_modules/parcel-bundler/bin/cli.js index.html --port 8080"
   },
   "dependencies": {
     "express": "4.16.4"
