--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "node-js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.html",
   "scripts": {
-    "start": "./node_modules/parcel-bundler/bin/cli.js src/index.js --port 8080"
+    "start": "./node_modules/parcel-bundler/bin/cli.js index.html --port 8080",
+    "build": "parcel build index.html"
   },
   "dependencies": {
     "express": "4.16.4"
